# 2D-Game-engine

./: CMakeLists.txt  Cloude auftrag.md  IDEAS.md  README.md  claude anweisung.md  claude neueideen.md
Tutorial/: Items.md  buildings.md  dimension.md  functions.md  house.md
assets/: config.json
assets/json/: sounds.json
assets/json/Buildings/: houses.json
assets/json/Map/: dimensions.json  ground.json  npcs.json  welt.json  world.json
assets/json/Map/dimensions/: house_interior.json  house_interior_House_1_-2.json  house_interior_House_3_0.json
assets/json/items/: item.json
assets/json/player/: inventar.json  player.json
assets/json/ui/: popups.json
buildings/: House.cpp
cmake/: protect_save.cmake
dimensions/: house_interior.cpp
hud/: example_hud.cpp
installer/: build_helper.ps1  setup.iss
items/: BeschwoerungsItem.cpp  BetonItem.cpp  Gras.cpp  HouseItem.cpp  KameraItem.cpp  MusicItem.cpp  PartikelItem.cpp  TruhenItem.cpp  grasItem.cpp
npcs/: Beschworen.cpp  Farmer.cpp
objects/: Truhe.cpp
player/: player_ext_methods.h  player_ext_vars.h
src/: Buildings.cpp  Buildings.h  Cam.cpp  Cam.h  ChunkManager.cpp  Dimension.cpp  Dimension.h  Item api.h  Items.cpp  Items.h  Mouse tile.h  NPC.cpp  building_api.h  ground.cpp  ground.h  inventar.cpp  inventar.h  item_base.h  item_registry.h  main.cpp  map.cpp  map.h  npc_pathfinding.h  player.cpp  player.h
tools/: reset_world.cpp
trash/2026-06-04_20-24-51/json/: config.json
trash/2026-06-04_20-24-51/json/Map/: npcs.json
trash/2026-06-04_20-24-51/json/Map/dimensions/: house_interior.json
trash/2026-06-04_20-24-51/json/items/: item.json
trash/2026-06-04_20-24-51/json/objects/: objects.json
trash/2026-06-04_20-24-51/json/player/: player.json
trash/2026-06-04_20-24-51/json/ui/: popups.json
trash/2026-06-04_20-26-30/json/Map/: world.json
trash/2026-06-04_20-26-30/json/npcs/: beschworen.json  farmer.json
trash/images/: samples.ase
ui/: FarmerDialog.cpp  house_entrance.cpp
